--- a/Frontend/notes-app/src/index.css
+++ b/Frontend/notes-app/src/index.css
@@ -26,4 +26,7 @@
       @apply w-full text-sm bg-primary text-white p-2 rounded my-4 hover:bg-blue-700;
    }
     
+   .icon-btn{
+      @apply text-xl text-slate-300 cursor-pointer hover:text-primary;
+   }
 }
